src copy/objects/Officer__c.object
<CustomObject>
    <fields>
        <fullName>AuthorizedSigner__c</fullName>
        <label>Authorized Signer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>IsPresenter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Presenter?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RecipientId__c</fullName>
        <label>Recipient Id</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>Transaction__c</referenceTo>
        <relationshipLabel>Officers</relationshipLabel>
        <relationshipName>Officers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hasInputBehalfDetails__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will notify to the behalf input details page if the director has been cover or not.</description>
        <inlineHelpText>DO NOT TOUCH THIS FIELD, BACK END FIELD</inlineHelpText>
        <label>has input behalf signatory details?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isCorporateDirector__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Corporate Director?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isDeceased__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Deceased?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isPowerOfAttorney__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Power Of Attorney?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isSignatoryBehalf__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to mark which officer has been selected by the user.</description>
        <inlineHelpText>DO NOT TOUCH THIS FIELD USED BY BACK END</inlineHelpText>
        <label>is Signatory on behalf?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isSignatory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Signatory?</label>
        <type>Checkbox</type>
    </fields>
    <label>Officer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Officer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Officers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>